Fix deprecated code use